🔧 Fix .gitignore to properly ignore Xcode user data files
- Add specific patterns for *.xcuserstate and UserInterfaceState.xcuserstate
- Remove UserInterfaceState.xcuserstate from git tracking
- Prevent Xcode workspace state from being committed

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ xcuserdata/
 *.xccheckout
 *.xcscmblueprint
 
+# Xcode User Data (specific patterns)
+*.xcuserstate
+UserInterfaceState.xcuserstate
+
 # Build products
 build/
 DerivedData/
