--- a/ContextResume.xcodeproj/xcshareddata/xcschemes/ContextResume.xcscheme
+++ b/ContextResume.xcodeproj/xcshareddata/xcschemes/ContextResume.xcscheme
@@ -61,6 +61,11 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OPENAI_API_KEY"
+            value = "REMOVED"
+            isEnabled = "YES">
+         </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
